Show suggestion model metadata on detail
